fixed card spacing bug on MDPI screens

--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -2,7 +2,7 @@
     margin-top: 0
 
 .welcome
-  margin-top: 70px   
+  margin-top: 70px
 
 .fBlogCard
   width: 100%
@@ -14,7 +14,7 @@
 
 
 .link .card
-  width: 249px
+  width: 267px
   height: 350px
 
 .link .card img
